# sigllm

./: Learn.ipynb  pyproject.toml
sigllm/: core.py
sigllm/pipelines/detector/: mistral_detector注释.json
sigllm/primitives/: transformation.py
sigllm/primitives/forecasting/: huggingface.py
sigllm/primitives/prompting/: huggingface.py  timeseries_preprocessing.py
